--- a/paper/paper.Rmd
+++ b/paper/paper.Rmd
@@ -1,5 +1,5 @@
 ---
-title: Evaluating a simplified forecast model in comparison to the European forecasting hub ensemble
+title: Evaluating an epidemiologically motivated surrogate model of a multi-model ensemble
 params:
   preprint: TRUE
 preprint: `r params$preprint`
