--- a/paper/paper.Rmd
+++ b/paper/paper.Rmd
@@ -1,8 +1,15 @@
 ---
 title: Evaluating an epidemiologically motivated surrogate model of a multi-model ensemble
+output:
+  bookdown::pdf_book:
+    base_format: rticles::peerj_article
+    extra_dependencies: ["float"]
+    keep_tex: true
+  bookdown::html_document2:
+    keep_toc: true   
 params:
-  preprint: TRUE
-preprint: `r params$preprint`
+  preprint: TRUE  
+preprint: params$preprint
 author: 
   - name: Sam Abbott
     affiliation: 1, 2
@@ -28,14 +35,7 @@ affiliation:
 abstract: > 
   Multi-model and multi-team ensemble forecasts have become widely used to generate reliable short-term predictions of infectious disease spread. Notably, various public health agencies have used them to leverage academic disease modelling during the COVID-19 pandemic. However, ensemble forecasts are difficult to interpret and require extensive effort from numerous participating groups as well as a coordination team. In other fields, resource usage has been reduced by training simplified models that reproduce some of the observed behaviour of more complex models. Here we used observations of the behaviour of the European COVID-19 Forecast Hub ensemble combined with our own forecasting experience to identify a set of properties present in current ensemble forecasts. We then developed a parsimonious forecast model intending to mirror these properties. We assess forecasts generated from this model in real time over six months (the 15th of January 2022 to the 19th of July 2022) and for multiple European countries. We focused on forecasts of cases one to four weeks ahead and compared them to those by the European forecast hub ensemble. We find that the surrogate model behaves qualitatively similarly to the ensemble in many instances, though with increased uncertainty and poorer performance around periods of peak incidence (as measured by the Weighted Interval Score). The performance differences, however, seem to be partially due to a subset of time points, and the proposed model appears better probabilistically calibrated than the ensemble. We conclude that our simplified forecast model may have captured some of the dynamics of the hub ensemble, but more work is needed to understand the implicit epidemiological model that it represents. 
 bibliography: library.bib
-link-citations: true
-output:
-  bookdown::pdf_book:
-    base_format: rticles::peerj_article
-    extra_dependencies: ["float"]
-    keep_tex: true
-   bookdown::html_document2:
-    keep_toc: true        
+link-citations: true   
 ---
 
 ```{r, include = FALSE}
